--- a/index.html
+++ b/index.html
@@ -21,11 +21,6 @@
       </div>
       <ul class="nav-list">
         <li><a href="../index.html">Início</a></li>
-        <li><a href="../Sobre nós/sobre.html">Sobre</a></li>
-        <li><a href="../produtos/produtos.html">Produtos</a></li>
-        <li><a href="../galeria/galeria.html">Galeria</a></li>
-        <li><a href="../TudoemFlor AULAS/aulas.html">Aulas</a></li>
-        <li><a href="../formulario/form.html">Contato</a></li>
       </ul>
     </nav>
   </header>
@@ -33,15 +28,11 @@
   <!-- Perfil -->
 <div class="instaperfil">
   <div class="logoperfil">
-    <img class="perfil" src="imagensgaleria/Logo-Flor.png" alt="tdemflor">
+    <img class="perfil" src="imagensgaleria/logo.jpeg" alt="tdemflor">
   </div>
   <div class="bio">
-    <h2>Tudo em Flor</h2>
-    <p>Galeria de imagens da empresa <br>
-      Tudo em Flor R&M. <br>
-      Crochê criativo feito com amor.<br>
-      Mimos personalizados.<br>
-      Embalagens sustentáveis.
+    <h2>Profistoys</h2>
+    <p>Marca de brinquedos infantis educacionais.
       </p>
   </div>
 </div>
@@ -49,11 +40,6 @@
   <hr> <br>
   <!-- Destaques -->
 <div class="destaques">
-  <img id="myImg1" src="imagensgaleria/WhatsApp Image 2024-06-12 at 08.36.03.jpeg" style="width:100%;max-width:100px;height: 100px;border-radius: 100%;">
-  <img id="myImg2" src="imagensgaleria/WhatsApp Image 2024-06-12 at 09.55.18.jpeg" style="width:100%;max-width:100px;height: 100px;border-radius: 100%;">
-  <img id="myImg3" src="imagensgaleria/WhatsApp Image 2024-06-12 at 09.55.19.jpeg" style="width:100%;max-width:100px;height: 100px;border-radius: 100%;">
-  <img id="myImg4" src="imagensgaleria/WhatsApp Image 2024-06-12 at 09.55.25.jpeg" style="width:100%;max-width:100px;height: 100px;border-radius: 100%;">
-  <img id="myImg5" src="imagensgaleria/WhatsApp Image 2024-06-13 at 08.45.36.jpeg" style="width:100%;max-width:100px;height: 100px;border-radius: 100%;">
 </div>
 
   <!-- The Modal -->
