--- a/index.html
+++ b/index.html
@@ -77,31 +77,21 @@
 <main>
     <div class="gallery-container">
         <a class="gallery-items">
-            <img src="imagensgaleria/WhatsApp Image 2024-06-11 at 09.04.38.jpeg" alt="#">
+            <img src="imagensgaleria/img01" alt="#">
         </a>
         <a class="gallery-items">
-            <img src="imagensgaleria/WhatsApp Image 2024-06-13 at 09.38.11.jpeg" alt="#">
+            <img src="imagensgaleria/img02" alt="#">
         </a>
         <a class="gallery-items">
-            <img src="imagensgaleria/WhatsApp Image 2024-06-13 at 11.26.15.jpeg" alt="#">
+            <img src="imagensgaleria/img03" alt="#">
         </a>
         <a class="gallery-items">
-            <img src="imagensgaleria/WhatsApp Image 2024-06-13 at 11.35.01.jpeg" alt="#">
+            <img src="imagensgaleria/img04" alt="#">
         </a>
         <a class="gallery-items">
-            <img src="imagensgaleria/WhatsApp Image 2024-06-13 at 11.35.02.jpeg" alt="#">
+            <img src="imagensgaleria/img05" alt="#">
         </a>
-        <a  class="gallery-items">
-            <img src="imagensgaleria/WhatsApp Image 2024-06-13 at 11.35.03.jpeg" alt="#">
-        </a>
-        <a class="gallery-items">
-            <img src="imagensgaleria/WhatsApp Image 2024-06-13 at 11.35.04.jpeg" alt="#">
-        </a>
-        <a  class="gallery-items">
-            <img src="imagensgaleria/WhatsApp Image 2024-06-17 at 11.28.32 (2).jpeg" alt="#">
-            <a  class="gallery-items">
-              <img src="imagensgaleria/WhatsApp Image 2024-06-17 at 11.28.32 (3).jpeg" alt="#">
-        </a>
+        
     </div>        
 </main>
 
@@ -126,32 +116,11 @@
           <li>
               <a href="../index.html" class="footer-link">Início</a>
           </li>
-          <li>
-              <a href="../Sobre nós/sobre.html" class="footer-link">Sobre</a>
-          </li>
-          <li>
-              <a href="../produtos/produtos.html" class="footer-link">Produtos</a>
-          </li>
-          <li>
-            <a href="../galeria/galeria.html" class="footer-link">Galeria</a>
-        </li>
-        <li>
-          <a href="../TudoemFlor AULAS/aulas.html" class="footer-link">Aulas</a>
-      </li>
-        <li>
-          <a href="../formulario/form.html" class="footer-link">Contato</a>
-      </li>
       </ul>
 
       <ul class="footer-list">
           <li>
               <h3>Fale conosco</h3>
-          </li>
-          <li>
-              <a class="footer-link">+55 (11) 96908-8120</a>
-          </li>
-          <li>
-              <a href="https://www.google.com/intl/pt-BR/gmail/about/" class="footer-link">rosemoreira51@gmail.com</a>
           </li>
       </ul> 
   </div>
@@ -161,6 +130,6 @@
   </div>
 </footer>
 
-<script src="galeria.js"></script>
+<script src="script.js"></script>
 </body>
 </html>
