--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
   <header>
     <nav>
-      <img class="logo" src="imagensgaleria/LOGO_HORIZONTAL.png">
+      <img class="logo" src="imagensgaleria/logo.jpeg">
       <div class="mobile-menu">
         <div class="line1"></div>
         <div class="line2"></div>
@@ -77,19 +77,19 @@
 <main>
     <div class="gallery-container">
         <a class="gallery-items">
-            <img src="imagensgaleria/img01" alt="#">
+            <img src="imagensgaleria/img01.jpg" alt="#">
         </a>
         <a class="gallery-items">
-            <img src="imagensgaleria/img02" alt="#">
+            <img src="imagensgaleria/img02.png" alt="#">
         </a>
         <a class="gallery-items">
-            <img src="imagensgaleria/img03" alt="#">
+            <img src="imagensgaleria/img03.webp" alt="#">
         </a>
         <a class="gallery-items">
-            <img src="imagensgaleria/img04" alt="#">
+            <img src="imagensgaleria/img04.webp" alt="#">
         </a>
         <a class="gallery-items">
-            <img src="imagensgaleria/img05" alt="#">
+            <img src="imagensgaleria/img05.jpg" alt="#">
         </a>
         
     </div>        
@@ -102,8 +102,6 @@
           <p>Empresa de Tricô e Crochê com a melhor qualidade</p>
 
           <div id="footer_social_media">
-              
-              <a href="https://shortlurl.com/vqLK" target="_blank" class="footer-link" id="whatsapp">
                   <i class="fa-brands fa-whatsapp"></i>
               </a>
           </div>
